--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html{
     background-color: rgba(159, 159, 159, 0.5);
     border-radius: 15px;
     border-style: solid;
-    border-color:rgba(255, 0, 10, 50%);
+    border-color: rgba(179, 179, 200, 0.5);
     width: 95%;
     padding-left: 20px;
     padding-bottom: 10px;;
@@ -39,7 +39,7 @@ table{
 }
 .table-header{
     font-size: medium;
-    background-color: rgba(150, 50, 90, 100%);
+    background-color: rgb(136, 122, 196);
 }
 h1{
     text-align: center;
