--- a/style.css
+++ b/style.css
@@ -29,10 +29,11 @@ html{
     margin-right:3%;
     margin-left:1%;
 }
+
 th,
 td {
-padding: 10px;
-border: 1px solid #333;
+    padding: 10px;
+    border: 1px solid #333;
 }
 table{
     font-size: small;
@@ -71,4 +72,22 @@ em{
 footer{
     color:white;
     margin-top: 10px;
+}
+
+/* spells.html - specific*/
+.magic h4{
+    background-color: rgba(159, 159, 159, 0.2);
+    padding : 5px 5px 0px 10px;
+    border-radius: 7px;
+    box-shadow : 2px 2px #333;
+    width : 98%;
+    margin-bottom:3px;
+    vertical-align: middle;
+}
+
+#main .magic  div {
+    border-left : 3px black solid;
+    padding-left : 10px;
+    margin-top: 0px;
+    padding-bottom: 5px;
 }
